Corrected experience panel scroll and overflow

--- a/picostrap5-child-base/sass/_custom.scss
+++ b/picostrap5-child-base/sass/_custom.scss
@@ -1856,7 +1856,7 @@ footer .footer-submenu a {
 // --------------------------------------------------------------------
 
 #homepageExperiencesPanel {
-  position: absolute;
+  position: relative;
   content: "";
   opacity: 1;
   display: none;
